Conception / stylisation du formulaire de contact

--- a/index.html
+++ b/index.html
@@ -51,23 +51,20 @@
             <div class="container" id="container-6">
                 <h1>CONTACTEZ-MOI</h1>
                 <form action="" method="get">
-                    <div class="input-text">
+                    <div class="form-element">
                         <label for="Nom">Votre nom (obligatoire)</label>
-                        <input type="text" name="" id="">
+                        <input type="text" name="" class="input-text" id="">
                     </div>
-                    <div class="input-text">
-                        <label for="Prénom">Votre prénom (obligatoire)</label>
-                        <input type="text" name="" id="">
+                    <div class="form-element">
+                        <label for="Email">Votre e-mail (obligatoire)</label><br>
+                        <input type="text" name="" class="input-text" id="">
                     </div>
-                    <div class="input-text"></div>
-                        <label for="Email">Votre e-mail (obligatoire)</label>
-                        <input type="text" name="" id="">
-                    <div class="input-text">
-                        <label for="Objet">Objet</label>
-                        <input type="text" name="" id="">
+                    <div class="form-element">
+                        <label for="Objet">Objet</label><br>
+                        <input type="text" name="" class="input-text" id="">
                     </div>
-                    <div class="input-text">
-                        <label for="Message">Votre message</label>
+                    <div class="form-element">
+                        <label for="Message">Votre message</label><br>
                         <textarea name="" id="" cols="30" rows="10"></textarea>
                     </div>
                     <button type="submit">ENVOYER</button>
