Stylisation du formulaire de contact

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <label for="Objet">Objet</label><br>
                         <input type="text" name="" class="input-text" id="">
                     </div>
-                    <div class="form-element">
+                    <div class="message">
                         <label for="Message">Votre message</label><br>
                         <textarea name="" id="" cols="30" rows="10"></textarea>
                     </div>
