Correction du code HTML

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
                 <h1>CONTACTEZ-MOI</h1>
                 <form action="" method="get">
                     <div class="form-element">
-                        <label for="Nom">Votre nom (obligatoire)</label>
-                        <input type="text" name="" class="input-text" id="">
+                        <label for="nom">Votre nom (obligatoire)</label>
+                        <input type="text" name="" class="input-text" id="nom">
                     </div>
                     <div class="form-element">
-                        <label for="Email">Votre e-mail (obligatoire)</label><br>
-                        <input type="text" name="" class="input-text" id="">
+                        <label for="email">Votre e-mail (obligatoire)</label><br>
+                        <input type="text" name="" class="input-text" id="email">
                     </div>
                     <div class="form-element">
-                        <label for="Objet">Objet</label><br>
-                        <input type="text" name="" class="input-text" id="">
+                        <label for="objet">Objet</label><br>
+                        <input type="text" name="" class="input-text" id="objet">
                     </div>
                     <div class="message">
-                        <label for="Message">Votre message</label><br>
-                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <label for="message">Votre message</label><br>
+                        <textarea name="" id="message" cols="30" rows="10"></textarea>
                     </div>
                     <button type="submit">ENVOYER</button>
                 </form>
