--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                 <form action="" method="get">
                     <div class="form-element">
                         <label for="nom">Votre nom (obligatoire)</label>
-                        <input type="text" name="" class="input-text" id="nom">
+                        <input type="text" name="nom" class="input-text" id="nom">
                     </div>
                     <div class="form-element">
                         <label for="email">Votre e-mail (obligatoire)</label><br>
-                        <input type="text" name="" class="input-text" id="email">
+                        <input type="text" name="email" class="input-text" id="email">
                     </div>
                     <div class="form-element">
                         <label for="objet">Objet</label><br>
-                        <input type="text" name="" class="input-text" id="objet">
+                        <input type="text" name="objet" class="input-text" id="objet">
                     </div>
                     <div class="message">
                         <label for="message">Votre message</label><br>
-                        <textarea name="" id="message" cols="30" rows="10"></textarea>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
                     </div>
                     <button type="submit">ENVOYER</button>
                 </form>
