--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
             <div class="container" id="container-2"></div>
             <div class="container" id="container-3"></div>
             <div class="container" id="container-4"></div>
-            <div class="container" id="container-5"></div>
+            <div class="container" id="container-5">
+                <h1>MES CREATIONS</h1>
+                
+            </div>
             <div class="container" id="container-6">
                 <h1>CONTACTEZ-MOI</h1>
                 <form action="" method="get">
