Élaboration d'un slider dans la partie "Mes créations"

--- a/index.html
+++ b/index.html
@@ -43,13 +43,52 @@
             </div>
         </div>
         <div class="right">
-            <div class="container" id="container-1"></div>
-            <div class="container" id="container-2"></div>
-            <div class="container" id="container-3"></div>
-            <div class="container" id="container-4"></div>
+            <div class="container" id="container-1">
+                <img src="" alt="">
+            </div>
+            <div class="container" id="container-2">
+                <h1>QUI SUIS-JE ?</h1>
+            </div>
+            <div class="container" id="container-3">
+                <h1>MON PARCOURS</h1>
+            </div>
+            <div class="container" id="container-4">
+                <h1>MES COMPETENCES</h1>
+            </div>
             <div class="container" id="container-5">
                 <h1>MES CREATIONS</h1>
-                
+                <div class="slideshow-container">
+                    <div class="slideshow">
+                        <div class="slides">
+                            <input type="radio" name="radio-btn" id="radio1">
+                            <input type="radio" name="radio-btn" id="radio2">
+                            <input type="radio" name="radio-btn" id="radio3">
+                            <figure class="slide first" id="slide1">
+                                <img src="Photo Site web Japon.png" alt="Un de mes projets">
+                                <figcaption></figcaption>
+                            </figure>
+                            <figure class="slide" id="slide2">
+                                <img src="Photo Site web Voyage spatial.png" alt="Un de mes projets">
+                                <figcaption></figcaption>
+                            </figure>
+                            <figure class="slide" id="slide3">
+                                <img src="Photo Site web Fast-food.png" alt="Un de mes projets">
+                                <figcaption></figcaption>
+                            </figure>
+                            <div class="navigation-auto">
+                                <div class="auto-btn1"></div>
+                                <div class="auto-btn2"></div>
+                                <div class="auto-btn3"></div>
+                            </div>
+                        </div>
+                        
+                        <div class="navigation-manual">
+                            <label for="radio1" class="manual-btn"></label>
+                            <label for="radio2" class="manual-btn"></label>
+                            <label for="radio3" class="manual-btn"></label>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="container" id="container-6">
                 <h1>CONTACTEZ-MOI</h1>
@@ -75,5 +114,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
