Finalisation de la partie "Mes créations" / Réorganisation du code CSS

--- a/index.html
+++ b/index.html
@@ -51,7 +51,32 @@
             </div>
             <div class="container" id="container-3">
                 <h1>MON PARCOURS</h1>
-            </div>
+                <div class="slideshow-container">
+                    <div class="arrow">
+                        <div class="previous">&#10096</div>
+                    </div>
+                    <div class="slideshow">
+                        <div class="slides">
+                            <div class="slide" id="slide1">
+                                <h2>EXPERIENCES PROFESSIONNELLES</h2><br>
+                                <p>Mars – Avril 2020 : Caissier – Franprix SUPER NATIONAL – Paris 13e</p>
+                                <p>Sept 2019 : Employé de rayon (stage) – Carrefour Market – Vanves</p>
+                                <p>Avril – Mai 2019 : Conseiller de vente (stage) – La Grande Récré Italie 2 – Paris 13e</p>
+                                <p>Déc 2011 : Agent polyvalent (stage d’observation) – La Banque Postale – Paris 12e</p>
+                            </div>
+                            <div class="slide" id="slide2">
+                                <h2>FORMATION</h2><br>
+                                <p>2020 – 2021 : Passe Numérique Pro spécialité « Intégrateur web » (Diplôme d’établissement niveau IV) - CNAM/Belleville Citoyenne</p>
+                                <p>2016 – 2018 : Licence Lettres « Lettres et Sciences Humaines » (1re  année) - Université Paris Diderot – Paris 7</p>
+                                <p>2016 : Baccalauréat général – Série Littéraire - Lycée Hélène Boucher, Paris 20e</p>
+                                <p>2012 : Brevet - Série Générale - Mention Assez Bien - Collège Georges Courteline, Paris 12e</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="arrow">
+                        <div class="next">&#10097</div>
+                    </div>
+                </div>
             <div class="container" id="container-4">
                 <h1>MES COMPETENCES</h1>
             </div>
