Alimentation en contenu / organisation des parties "Accueil" et "Qui suis-je ?"

--- a/index.html
+++ b/index.html
@@ -44,10 +44,23 @@
         </div>
         <div class="right">
             <div class="container" id="container-1">
-                <img src="" alt="">
+                <img src="Logo Portfolio 1.2.svg" alt="Logo">
             </div>
             <div class="container" id="container-2">
                 <h1>QUI SUIS-JE ?</h1>
+                <div class="content">
+                    <div id="photo">
+                        <img src="photo.png" alt="Photo">
+                    </div>
+                    <div id="text">
+                        <p>Bonjour !</p><br>
+                        <p>Je m’appelle Soleymane Latreche, j’ai 23 ans, et j’aspire à travailler dans le secteur du développement web.</p><br>                          
+                        <p>Nourrissant depuis plusieurs années un vif intérêt pour les sciences et techniques, et plus spécifiquement pour l’informatique, j’ai intégré en novembre 2020 la formation Passe numérique Pro du Cnam afin d’approfondir mes connaissances dans le domaine des cultures numériques.</p><br>
+                        <p>Celle-ci m’a permis de développer bon nombre de compétences relatives au métier d’intégrateur web (écrire des codes à l’aide des langages HTML / CSS / JavaScript, traduire des maquettes graphiques en pages web, insérer des objets multimédia dans des sites web, assurer le référencement, etc.) mais aussi de renforcer mes savoirs dans des disciplines complémentaires telles que les mathématiques, l’anglais ou la communication.</p><br>
+                        <p>J’envisage à présent de trouver une formation en alternance qui me permettrait non seulement d’enrichir les enseignements théoriques qui m’ont été dispensés en matière de programmation et de web-design, mais aussi de mettre en pratique mes nouveaux acquis en milieu professionnel.</p><br>
+                        <p>Passionné, rigoureux, soucieux de qualité et d’efficacité : tels sont les qualificatifs qui me correspondent le mieux ! Faisant montre d’un sérieux inébranlable et d’une soif de réussite toujours plus intense, je travaille chaque jour sans relâche dans l’espoir de voir ma technique se perfectionner davantage, et ainsi me révéler en mesure de répondre favorablement aux exigences de mes futurs commanditaires.</p>
+                    </div>
+                </div>
             </div>
             <div class="container" id="container-3">
                 <h1>MON PARCOURS</h1>
@@ -79,6 +92,7 @@
                 </div>
             <div class="container" id="container-4">
                 <h1>MES COMPETENCES</h1>
+                
             </div>
             <div class="container" id="container-5">
                 <h1>MES CREATIONS</h1>
