Ajout de nouveaux dossiers

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             </div>
             <div class="container" id="container-3">
                 <h1>MON PARCOURS</h1>
-                <div class="slideshow-container">
+                <div class="slider-container">
                     <div class="arrow">
                         <div class="previous">&#10096</div>
                     </div>
-                    <div class="slideshow">
+                    <div class="slider">
                         <div class="slides">
                             <div class="slide" id="slide1">
                                 <h1>EXPERIENCES PROFESSIONNELLES</h1>
@@ -92,7 +92,21 @@
                 </div>
             <div class="container" id="container-4">
                 <h1>MES COMPETENCES</h1>
-                
+                <div class="content">
+                    <div class="left-side">
+                        <div class="progress-bar">
+                            <label for="HTML5">HTML5</label>
+                            <progress id="HTML5" max="100" value="60"></progress>
+                        </div>
+                        <div class="progress-bar"></div>
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="right-side">
+                        <div class="progress-bar"></div>
+                        <div class="progress-bar"></div>
+                        <div class="progress-bar"></div>
+                    </div>
+                </div>
             </div>
             <div class="container" id="container-5">
                 <h1>MES CREATIONS</h1>
